discussion/kv_engine/164407/164407_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[cbcrypto] Add support for generating Argon2id hash

Change-Id: I1c02e8c219afae44a82b289741f35a389133ddbc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-10-27 09:58:39.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-27 10:05:00.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16248/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23627/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23627/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3311/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3311/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15290/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15290/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15571/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15571/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41404/ : FAILURE

Compile error at ..\kv_engine\cbcrypto\cbcrypto.cc(683): error C3861: "argon2id_hash_raw": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41404/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13678/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbcrypto/cbcrypto.cc:683:15: error: use of undeclared identifier "argon2id_hash_raw" [clang-diagnostic-error]
    auto rc = argon2id_hash_raw(t_cost,
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbcrypto/cbcrypto.cc:692:15: error: use of undeclared identifier "ARGON2_OK" [clang-diagnostic-error]
    if (rc == ARGON2_OK) {
              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13678/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbcrypto/cbcrypto.cc:683:15:
error: use of undeclared identifier "argon2id_hash_raw" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13678/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14455/ : FAILURE

Compile error at [2021-10-27T10:00:36.576Z] ../kv_engine/cbcrypto/cbcrypto.cc:683:15:
error: use of undeclared identifier "argon2id_hash_raw"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14455/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3382/ : FAILURE

Compile error at [2021-10-27T10:00:15.247Z] ../kv_engine/cbcrypto/cbcrypto.cc:683:15:
error: ?argon2id_hash_raw? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3382/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12478/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
